--- a/dev/imersao.css
+++ b/dev/imersao.css
@@ -59,4 +59,34 @@ h3{
     padding: 16px 32px;
     margin-top: 20px;
     border-radius: 50px;
+    background-color: rgb(30, 124, 201);
+    border: solid 2px rgb(94, 164, 235);
+    cursor: pointer;
+    color: #f7f7f7;
+    font-size: 18px;
+    font-weight: 700;
+    transition: 0.3s;
+}
+
+.app button:hover{
+    background-color: rgb(94, 164, 235) ;
+    transform: scale(1.1);
+}
+
+.itens-list{
+    padding: 32px;
+}
+
+.itens-list .list-banners{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    width: 80vw;
+    gap: 16px;
+}
+
+.itens-list .list-banners img{
+    width: 200px;
+    border-radius: 4px;
+    box-shadow: 0 0 8px rgba(145, 200, 255, 0.5);
 }
